--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,9 +102,16 @@ p{
     font-size: 18px;
 }
 
-.css-image{
+.img-holder{
     float: left;
     margin: 10px 20px 20px 20px;
+    height: 200px;
+    width: 200px;
+}
+
+.css-image{
+    width: 100%;
+    height: 100%;
 }
 
 /* .grid-container{
@@ -114,13 +121,15 @@ p{
 } */
 
 .lable{
-    margin: 0px 20px;
+    margin: 0px;
     padding-top: 10px;
 }
-
+.sec-input{
+    margin: 0px 20px;
+}
 .input-name, .input-email, .input-message{
-    margin: 5px 20px;
-    width: 95%;
+    margin: 5px 0px;
+    width: 100%;
     box-sizing: border-box;
 }
 
@@ -140,9 +149,11 @@ p{
     float: left;
     position: relative;
     margin:20px; 
+    width: 300px;
+    height: 200px;
 }
 .port-img{
-    width: 300px;
+    width: 100%;
     height: 200px;
 }
 .port-title{
